# DotnetFrameworkChecker

./: .gitignore  Cargo.toml  DotnetFrameworkChecker.csproj  GetDotNetVersion.cs  LICENSE  Program.cs  README.md  nuget.config  publish.ps1
src/: get_dotnet_version.rs  main.rs
