[package]
name = "dotnet_framework_checker"
version = "0.1.0"
authors = ["zhangchao <zackability@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = { version = "0.8.0", features = ["transactions"] }
